--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,6 @@
 
 }
 
-
 #destacados{
   color: white;
   font-family: 'Open Sans', sans-serif;
@@ -26,12 +25,8 @@
     text-align: center;
     color: white;
     background-color:deepskyblue
-    
    
 }
-
-
-
 
 
 #sec-trabajos .card > img {
@@ -44,15 +39,13 @@
     text-shadow: -1px 2px 10px rgba(0, 0, 0, 0.52);
   }
   
-  .text-rowdies {
-    font-family: "Rowdies", cursive;
-  }
+
   
-  p {
+.p {
     font-family: "Roboto", sans-serif;
   }
   
-  .custom-icon:hover {
+.custom-icon:hover {
     color: aqua;
   }
 
@@ -60,12 +53,12 @@
     background-color: deepskyblue;
   }
 
-  .box{
+.box{
     height: 168px;
     width: 253px;
   }
 
-  .pie{
+.pie{
     background-color: deepskyblue;
     text-align: left;
   }
